# the-music-one

./: .env.local.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  package-lock.json  package.json  spec.md  vite.config.js
api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
api/app/: config.py  database.py  dependencies.py  logging_config.py  main.py  store.py
api/app/middleware/: logging_middleware.py
api/app/models/: __init__.py  feature_flag.py  profile.py  queue_item.py  session.py  skip_vote.py
api/app/repositories/: base.py  db_auth.py  profile_repo.py  queue_repo.py  session_repo.py  skip_vote_repo.py
api/app/routers/: auth.py  events.py  flags.py  items.py  mobile_auth.py  playlists.py  profiles.py  sessions.py  songs.py  youtube.py
api/app/schemas/: __init__.py  auth.py  profile.py  queue_item.py  session.py
api/app/services/: auth_service.py  event_bus.py  playlist_service.py  profile_service.py  queue_service.py  session_service.py  song_service.py
api/migrations/: env.py
api/migrations/versions/: 001_baseline.py  002_playlist_queue_fields.py  (+4 more)
api/scripts/: dump_schema.sh
api/tests/: test_auth.py  test_base_repo.py  test_csrf.py  test_flags.py  test_jwks_cache.py  test_logging_middleware.py  test_oauth_state.py  test_participant_authz.py  test_playlist_security.py  test_playlist_service.py  test_profiles.py  test_queue.py  test_queue_repo.py  test_queue_service.py  test_security_critical.py  test_sessions.py  test_songs.py
public/: CNAME  (+1 more)
(+173 files in other folders)
